# Gstreamer

./: README.md
Solo-1-PipelineTest/: readme  solo-stream.c
Solo-2-PipelineCmake/: CMakeLists.txt  SoloUDPConfig.h  solo-stream2.c
